--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,9 @@ django = "4.2.1"
 djangorestframework = "3.14"
 drf-yasg = "1.21.5"
 psycopg = "^3.1.16"
+pyreportjasper = "^2.1.3"
+pandas = "^2.1.4"
+openpyxl = "^3.1.2"
 
 
 [build-system]
